# llvm_obfuscator

./: CMakeLists.txt  README.md  api_ob.py  build.sh  run.sh  test.cpp
anti_debug_files/: APIflags.c  APIflags.ll  anti-analysis.c  anti-analysis.ll  anti-vm.c  anti-vm.ll  antiVMbreakpoints.c  antiVMbreakpoints.ll  debug.c  debug.ll  timeUI.c  timeUI.ll  vectoredExceptionHandler.c  vectoredExceptionHandler.ll  vm.c  vm.ll
anti_debug_pass/: CMakeLists.txt  debug_checker.cpp
api_pass/: api_ob.py  peb.h  winapi.csv
encrypt_pass/: CMakeLists.txt  encrypter.cpp
output/: code.c  t1.c  t1.ll  t2.ll  t3.ll  t4.ll  temp.h
runner/: CMakeLists.txt  passer.cpp
